# 2204

./: .gitignore  .gitlab-ci.yml
.gitlab/: pull_request_template.md
.gitlab/issue_templates/: Bug.md  Feature.md
CcDev/docker/script/: base.sh  docker-compose.yml  registry.sh
Extend/: Dockerfile  docker_build.sh
GoDev/: Makefile  README.md  lite5gc.sh
GoDev/amf/: main.go
GoDev/amf/idmgramf/: initialize.go  sm_ctxt_id.go
GoDev/amf/n2proc/: main.go
GoDev/amf/sbiamf/: sbi_amf.go  sc_msg_handler.go  smf_pdu_session_handler.go  udm_sdm_handler.go  udm_ueau_handler.go  udm_uecm_handler.go
GoDev/amf/tatable/: ta_table.go
GoDev/ausf/manager/: ausf_av_ctxt_table.go  handle_auth_req_msg.go  handle_auth_req_msg_test.go
GoDev/cmn/bcd/: bcd_test.go
GoDev/cmn/confsc/: data_def.go
GoDev/cmn/fsm/: base_fsm.go  fsm.go
GoDev/cmn/idmgr/: idMap.go  idMgr.go  idMgr_test.go
GoDev/cmn/idmgr64/: id_map.go  id_mgr.go  id_mgr_test.go
GoDev/cmn/iprange/: iprange.go  (+1 more)
GoDev/cmn/message/ngap/ngaposs/msgTypes/: CMakeLists.txt  ngapMsgTypes.cc  ngapMsgTypes.h
GoDev/cmn/message/ngap/ngaposs/ngapPdus/: CMakeLists.txt  downlinkNASTransportPdu.cc  downlinkNASTransportPdu.h  errorIndicationPdu.cc  errorIndicationPdu.h  initialContextSetupFailurePdu.cc  initialContextSetupFailurePdu.h  initialContextSetupRequestPdu.cc  initialContextSetupRequestPdu.h  initialContextSetupResponsePdu.cc  initialContextSetupResponsePdu.h  initialUEMessagePdu.cc  initialUEMessagePdu.h  nasNonDeliveryIndicationPdu.cc  nasNonDeliveryIndicationPdu.h  ngResetAckPdu.cc  ngResetAckPdu.h  ngResetPdu.cc  ngResetPdu.h  ngSetupFailurePdu.cc  ngSetupFailurePdu.h  ngSetupRequestPdu.cc  ngSetupRequestPdu.h  ngSetupResponsePdu.cc  ngSetupResponsePdu.h  ngapOss.h  ngapOssCtxt.cc  ngapOssCtxt.h  ngapOssIe.h  ngapOssPdu.cc  ngapOssPdu.h  pagingPdu.cc  pagingPdu.h  pduSessionResourceModifyRequestPdu.cc  pduSessionResourceModifyRequestPdu.h  pduSessionResourceModifyRequestTransferPdu.cc  pduSessionResourceModifyRequestTransferPdu.h  pduSessionResourceModifyResponsePdu.cc  pduSessionResourceModifyResponsePdu.h  pduSessionResourceModifyResponseTransferPdu.cc  (+33 more)
GoDev/cmn/message/ngap/ngaposs/ngapToed/: CMakeLists.txt  ngapToed_x86.h
GoDev/cmn/message/ngap/ngaposs/testcase/: CMakeLists.txt  ngsetuprequest_test.cc
GoDev/openapi/: convert.go  serialize.go
GoDev/smf/: main.go
GoDev/udm/: main.go
GoDev/upf/: Makefile  upf.go
(+1106 files in other folders)
